chore: use @zerodev/global-address package

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@zerodev/magic-address": "^0.0.13",
+    "@zerodev/global-address": "^0.0.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
