--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magic-address-example",
+  "name": "global-address-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
